--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ HOST_WEBSERVICE=http://web-services.domensai.ecole
 
 HOST=sgbd-eleves.domensai.ecole
 PORT=5432
-DATABASE=
-USER=
-PASSWORD=
+DATABASE=id2241
+USER=id2241
+PASSWORD=id2241
